--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -14,6 +14,11 @@
     gap: 3rem;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 @media (max-width: 768px) {
     .contact-content{
         flex-direction: column-reverse;
