--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -74,6 +74,7 @@
     outline: 1.5px solid transparent;
     border-radius: 0.2rem;
     cursor: pointer;
+    text-decoration: none;
     transition: all 0.3s ease;
 }
 
