--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -42,10 +42,10 @@
 }
 
 .skills {
-    flex: 1;
-    display: grid;
-    grid-gap: 3rem;
-    grid-template-columns: repeat(2, 1fr);
+  flex: 1;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
 }
 
 .skills-info{
@@ -63,27 +63,33 @@
     }
 }
 
-@media (max-width: 768px){
-    .skills-content {
-        flex-direction: column-reverse;
-        gap: 3rem;
-    }
+@media (max-width: 768px) {
+  .skills-content {
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
 
-    .skills,
-    .skills-info {
-        width: 100%;
-    }
+  .skills {
+    width: 100%;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
 
-    .skills-container h5{
-        font-size: 1.3rem;
-        margin-bottom: 2rem;
-    }
+  .skills-container h5 {
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+  }
 
-    .skills-container::after,
-    .skills-container::before {
-        width: 18rem;
-        height: 18rem;
-    }
+  .skills-container::after,
+  .skills-container::before {
+    width: 18rem;
+    height: 18rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .skills {
+    grid-template-columns: 1fr;
+  }
 }
 
 @media (max-width: 600px){
