--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -8,12 +8,13 @@
     flex: 1;
 }
 
+
 .hero-content h2{
     width: 50%;
     font-size: 3.8rem;
     font-weight: 600;
     line-height: 5rem;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
 
     /* overflow: hidden;
     white-space: nowrap;
@@ -26,8 +27,8 @@
 .hero-content h4{
     font-size: 2.5rem;
     font-weight: 600;
-    line-height: 3rem;
-    margin-bottom: 1rem;
+    /* line-height: 3rem; */
+    /* margin-bottom: 1rem; */
 }
 
 .hero-content p{
@@ -35,7 +36,7 @@
     width: 80%;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 2rem;
+    line-height: 1.5rem;
 }
 
 .hero-content p span{
@@ -46,6 +47,21 @@
     background-repeat: no-repeat;
     background-size: 80%;
 }
+
+
+.experience-text {
+  font-size: 0.8rem;
+  font-weight: 400;
+  /* margin-bottom: 0.1rem; */
+}
+
+
+
+.highlight {
+  color: #f57900; 
+  font-weight: 400;
+}
+
 
 .tech-carousel-wrapper {
   width: 100%;
